--- a/.github/workflows/git-ci-pipeline.yaml
+++ b/.github/workflows/git-ci-pipeline.yaml
@@ -19,5 +19,5 @@ jobs:
            username: testgit
            password: KI4g6bMGERQ3Vu4nooOwTkH2HylPaeWYiuQmB/ASq++ACRDE72lO
       - run: |
-          docker build . -t ${{ secrets.ACR_ENDPOINT }}/knowledgefactory:${{ github.sha }}
-          docker push ${{ secrets.ACR_ENDPOINT }}/knowledgefactory:${{ github.sha }}
+          docker build . -t ${{ secrets.ACR_ENDPOINT }}/testgit:${{ github.sha }}
+          docker push ${{ secrets.ACR_ENDPOINT }}/testgit:${{ github.sha }}
